--- a/index.html
+++ b/index.html
@@ -140,6 +140,88 @@
         </div>
       </div>
       <section>
+        <div class="pattern pattern-france"></div>
+        <div class="container">
+          <div class="content">
+            <div class="row">
+              <div class="col-12 col-md-6">
+                <div class="title"><h2>France</h2></div>
+              </div>
+              <div class="col-12 col-md-6 order-md-2">
+                <div class="text-part">
+                  <p>
+                    La cuisine française, c'est l'art de la perfection.
+                    Découvrez des plats élaborés avec précision, des vins exquis
+                    et une ambiance chaleureuse.
+                  </p>
+                  <img src="img/france/french-food-1.jpeg" alt="" />
+                </div>
+              </div>
+              <div class="col-12 col-md-6">
+                <img src="img/france/french-food-4.jpeg" alt="" />
+              </div>
+              <div class="col-12">
+                <div class="carousel">carousel</div>
+              </div>
+              <div class="col-12 col-md-6 order-md-1">
+                <div class="center">
+                  <div class="button-menu">Voir le menu</div>
+                </div>
+              </div>
+              <div class="col-12 col-md-6">
+                <img src="img/france/french-food-2.jpeg" alt="" />
+              </div>
+              <div class="col-12 col-md-6 order-md-2">
+                <div class="img-height">
+                  <img src="img/france/french-food-3.jpeg" alt="" />
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+      <section>
+        <div class="pattern pattern-japan"></div>
+        <div class="container">
+          <div class="content">
+            <div class="row">
+              <div class="col-12 col-md-6">
+                <div class="title"><h2>France</h2></div>
+              </div>
+              <div class="col-12 col-md-6 order-md-2">
+                <div class="text-part">
+                  <p>
+                    La cuisine française, c'est l'art de la perfection.
+                    Découvrez des plats élaborés avec précision, des vins exquis
+                    et une ambiance chaleureuse.
+                  </p>
+                  <img src="img/france/french-food-1.jpeg" alt="" />
+                </div>
+              </div>
+              <div class="col-12 col-md-6">
+                <img src="img/france/french-food-4.jpeg" alt="" />
+              </div>
+              <div class="col-12">
+                <div class="carousel">carousel</div>
+              </div>
+              <div class="col-12 col-md-6 order-md-1">
+                <div class="center">
+                  <div class="button-menu">Voir le menu</div>
+                </div>
+              </div>
+              <div class="col-12 col-md-6">
+                <img src="img/france/french-food-2.jpeg" alt="" />
+              </div>
+              <div class="col-12 col-md-6 order-md-2">
+                <div class="img-height">
+                  <img src="img/france/french-food-3.jpeg" alt="" />
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+      <section>
         <div class="pattern"></div>
         <div class="container">
           <div class="content">
@@ -180,41 +262,170 @@
           </div>
         </div>
       </section>
-      <div class="row">
-        <div class="col-12">Japon title</div>
-        <div class="col-12">Japon button</div>
-        <div class="col-12">Japon text</div>
-      </div>
-      <div class="row">
-        <div class="col-12">Ethiopie title</div>
-        <div class="col-12">Ethiopie button</div>
-        <div class="col-12">Ethiopie text</div>
-      </div>
-      <div class="row">
-        <div class="col-12">Grèce title</div>
-        <div class="col-12">Grèce button</div>
-        <div class="col-12">Grèce text</div>
-      </div>
-      <div class="row">
-        <div class="col-12">Mexique title</div>
-        <div class="col-12">Mexique button</div>
-        <div class="col-12">Mexique text</div>
-      </div>
-      <div class="row">
-        <div class="col-12">Liban title</div>
-        <div class="col-12">Liban button</div>
-        <div class="col-12">Liban text</div>
-      </div>
-      <div class="row">
-        <div class="col-12">Maroc title</div>
-        <div class="col-12">Maroc button</div>
-        <div class="col-12">Maroc text</div>
-      </div>
-      <div class="row">
-        <div class="col-12">Inde title</div>
-        <div class="col-12">Inde button</div>
-        <div class="col-12">Inde text</div>
-      </div>
+      <section>
+        <div class="pattern"></div>
+        <div class="container">
+          <div class="content">
+            <div class="row">
+              <div class="col-12 col-md-6">
+                <div class="title"><h2>France</h2></div>
+              </div>
+              <div class="col-12 col-md-6 order-md-2">
+                <div class="text-part">
+                  <p>
+                    La cuisine française, c'est l'art de la perfection.
+                    Découvrez des plats élaborés avec précision, des vins exquis
+                    et une ambiance chaleureuse.
+                  </p>
+                  <img src="img/france/french-food-1.jpeg" alt="" />
+                </div>
+              </div>
+              <div class="col-12 col-md-6">
+                <img src="img/france/french-food-4.jpeg" alt="" />
+              </div>
+              <div class="col-12">
+                <div class="carousel">carousel</div>
+              </div>
+              <div class="col-12 col-md-6 order-md-1">
+                <div class="center">
+                  <div class="button-menu">Voir le menu</div>
+                </div>
+              </div>
+              <div class="col-12 col-md-6">
+                <img src="img/france/french-food-2.jpeg" alt="" />
+              </div>
+              <div class="col-12 col-md-6 order-md-2">
+                <div class="img-height">
+                  <img src="img/france/french-food-3.jpeg" alt="" />
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+      <section>
+        <div class="pattern"></div>
+        <div class="container">
+          <div class="content">
+            <div class="row">
+              <div class="col-12 col-md-6">
+                <div class="title"><h2>France</h2></div>
+              </div>
+              <div class="col-12 col-md-6 order-md-2">
+                <div class="text-part">
+                  <p>
+                    La cuisine française, c'est l'art de la perfection.
+                    Découvrez des plats élaborés avec précision, des vins exquis
+                    et une ambiance chaleureuse.
+                  </p>
+                  <img src="img/france/french-food-1.jpeg" alt="" />
+                </div>
+              </div>
+              <div class="col-12 col-md-6">
+                <img src="img/france/french-food-4.jpeg" alt="" />
+              </div>
+              <div class="col-12">
+                <div class="carousel">carousel</div>
+              </div>
+              <div class="col-12 col-md-6 order-md-1">
+                <div class="center">
+                  <div class="button-menu">Voir le menu</div>
+                </div>
+              </div>
+              <div class="col-12 col-md-6">
+                <img src="img/france/french-food-2.jpeg" alt="" />
+              </div>
+              <div class="col-12 col-md-6 order-md-2">
+                <div class="img-height">
+                  <img src="img/france/french-food-3.jpeg" alt="" />
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+      <section>
+        <div class="pattern"></div>
+        <div class="container">
+          <div class="content">
+            <div class="row">
+              <div class="col-12 col-md-6">
+                <div class="title"><h2>France</h2></div>
+              </div>
+              <div class="col-12 col-md-6 order-md-2">
+                <div class="text-part">
+                  <p>
+                    La cuisine française, c'est l'art de la perfection.
+                    Découvrez des plats élaborés avec précision, des vins exquis
+                    et une ambiance chaleureuse.
+                  </p>
+                  <img src="img/france/french-food-1.jpeg" alt="" />
+                </div>
+              </div>
+              <div class="col-12 col-md-6">
+                <img src="img/france/french-food-4.jpeg" alt="" />
+              </div>
+              <div class="col-12">
+                <div class="carousel">carousel</div>
+              </div>
+              <div class="col-12 col-md-6 order-md-1">
+                <div class="center">
+                  <div class="button-menu">Voir le menu</div>
+                </div>
+              </div>
+              <div class="col-12 col-md-6">
+                <img src="img/france/french-food-2.jpeg" alt="" />
+              </div>
+              <div class="col-12 col-md-6 order-md-2">
+                <div class="img-height">
+                  <img src="img/france/french-food-3.jpeg" alt="" />
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+      <section>
+        <div class="pattern"></div>
+        <div class="container">
+          <div class="content">
+            <div class="row">
+              <div class="col-12 col-md-6">
+                <div class="title"><h2>France</h2></div>
+              </div>
+              <div class="col-12 col-md-6 order-md-2">
+                <div class="text-part">
+                  <p>
+                    La cuisine française, c'est l'art de la perfection.
+                    Découvrez des plats élaborés avec précision, des vins exquis
+                    et une ambiance chaleureuse.
+                  </p>
+                  <img src="img/france/french-food-1.jpeg" alt="" />
+                </div>
+              </div>
+              <div class="col-12 col-md-6">
+                <img src="img/france/french-food-4.jpeg" alt="" />
+              </div>
+              <div class="col-12">
+                <div class="carousel">carousel</div>
+              </div>
+              <div class="col-12 col-md-6 order-md-1">
+                <div class="center">
+                  <div class="button-menu">Voir le menu</div>
+                </div>
+              </div>
+              <div class="col-12 col-md-6">
+                <img src="img/france/french-food-2.jpeg" alt="" />
+              </div>
+              <div class="col-12 col-md-6 order-md-2">
+                <div class="img-height">
+                  <img src="img/france/french-food-3.jpeg" alt="" />
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
     </main>
     <footer>
       <div class="row">
