al menu section added and corrected

--- a/index.html
+++ b/index.html
@@ -186,20 +186,20 @@
           <div class="content">
             <div class="row">
               <div class="col-12 col-md-6">
-                <div class="title"><h2>France</h2></div>
+                <div class="title"><h2>Japon</h2></div>
               </div>
               <div class="col-12 col-md-6 order-md-2">
                 <div class="text-part">
                   <p>
-                    La cuisine française, c'est l'art de la perfection.
-                    Découvrez des plats élaborés avec précision, des vins exquis
-                    et une ambiance chaleureuse.
+                    Plongez dans la sérénité de la cuisine japonaise. Chaque
+                    plat est une œuvre d'art comestible, chaque bouchée est une
+                    expérience méditative. 
                   </p>
-                  <img src="img/france/french-food-1.jpeg" alt="" />
+                  <img src="img/japon/japanese-food-1.jpeg" alt="" />
                 </div>
               </div>
               <div class="col-12 col-md-6">
-                <img src="img/france/french-food-4.jpeg" alt="" />
+                <img src="img/japon/japanese-food-3.jpeg" alt="" />
               </div>
               <div class="col-12">
                 <div class="carousel">carousel</div>
@@ -210,11 +210,11 @@
                 </div>
               </div>
               <div class="col-12 col-md-6">
-                <img src="img/france/french-food-2.jpeg" alt="" />
+                <img src="img/japon/japanese-food-2.jpeg" alt="" />
               </div>
               <div class="col-12 col-md-6 order-md-2">
                 <div class="img-height">
-                  <img src="img/france/french-food-3.jpeg" alt="" />
+                  <img src="img/japon/japanese-food-4.jpeg" alt="" />
                 </div>
               </div>
             </div>
@@ -222,25 +222,25 @@
         </div>
       </section>
       <section>
-        <div class="pattern"></div>
+        <div class="pattern pattern-ethiopian"></div>
         <div class="container">
           <div class="content">
             <div class="row">
               <div class="col-12 col-md-6">
-                <div class="title"><h2>France</h2></div>
+                <div class="title"><h2>Ethiopie</h2></div>
               </div>
               <div class="col-12 col-md-6 order-md-2">
                 <div class="text-part">
                   <p>
-                    La cuisine française, c'est l'art de la perfection.
-                    Découvrez des plats élaborés avec précision, des vins exquis
-                    et une ambiance chaleureuse.
+                    La cuisine éthiopienne, c'est une exploration des saveurs de
+                    l'Afrique de l'Est. Découvrez des plats authentiques qui
+                    reflètent la diversité de la région. 
                   </p>
-                  <img src="img/france/french-food-1.jpeg" alt="" />
+                  <img src="img/éthiopie/ethiopian-food-3.jpeg" alt="" />
                 </div>
               </div>
               <div class="col-12 col-md-6">
-                <img src="img/france/french-food-4.jpeg" alt="" />
+                <img src="img/éthiopie/ethiopian-food-2.jpeg" alt="" />
               </div>
               <div class="col-12">
                 <div class="carousel">carousel</div>
@@ -251,11 +251,11 @@
                 </div>
               </div>
               <div class="col-12 col-md-6">
-                <img src="img/france/french-food-2.jpeg" alt="" />
+                <img src="img/éthiopie/ethiopian-food-1.jpeg" alt="" />
               </div>
               <div class="col-12 col-md-6 order-md-2">
                 <div class="img-height">
-                  <img src="img/france/french-food-3.jpeg" alt="" />
+                  <img src="img/éthiopie/ethiopian-food-4.jpeg" alt="" />
                 </div>
               </div>
             </div>
@@ -263,25 +263,25 @@
         </div>
       </section>
       <section>
-        <div class="pattern"></div>
+        <div class="pattern pattern-greek"></div>
         <div class="container">
           <div class="content">
             <div class="row">
               <div class="col-12 col-md-6">
-                <div class="title"><h2>France</h2></div>
+                <div class="title"><h2>Grèce</h2></div>
               </div>
               <div class="col-12 col-md-6 order-md-2">
                 <div class="text-part">
                   <p>
-                    La cuisine française, c'est l'art de la perfection.
-                    Découvrez des plats élaborés avec précision, des vins exquis
-                    et une ambiance chaleureuse.
+                    La cuisine grecque, c'est une symphonie de saveurs
+                    méditerranéennes. Découvrez des plats authentiques qui
+                    capturent l'esprit et la tradition de la Grèce. 
                   </p>
-                  <img src="img/france/french-food-1.jpeg" alt="" />
+                  <img src="img/grèce/greek-food-2.jpeg" alt="" />
                 </div>
               </div>
               <div class="col-12 col-md-6">
-                <img src="img/france/french-food-4.jpeg" alt="" />
+                <img src="img/grèce/greek-food-1.jpeg" alt="" />
               </div>
               <div class="col-12">
                 <div class="carousel">carousel</div>
@@ -292,11 +292,11 @@
                 </div>
               </div>
               <div class="col-12 col-md-6">
-                <img src="img/france/french-food-2.jpeg" alt="" />
+                <img src="img/grèce/greek-food-3.jpeg" alt="" />
               </div>
               <div class="col-12 col-md-6 order-md-2">
                 <div class="img-height">
-                  <img src="img/france/french-food-3.jpeg" alt="" />
+                  <img src="img/grèce/greek-food-4.jpeg" alt="" />
                 </div>
               </div>
             </div>
@@ -304,25 +304,25 @@
         </div>
       </section>
       <section>
-        <div class="pattern"></div>
+        <div class="pattern pattern-mexican"></div>
         <div class="container">
           <div class="content">
             <div class="row">
               <div class="col-12 col-md-6">
-                <div class="title"><h2>France</h2></div>
+                <div class="title"><h2>Mexique</h2></div>
               </div>
               <div class="col-12 col-md-6 order-md-2">
                 <div class="text-part">
                   <p>
-                    La cuisine française, c'est l'art de la perfection.
-                    Découvrez des plats élaborés avec précision, des vins exquis
-                    et une ambiance chaleureuse.
+                    Plongez dans la chaleur de la cuisine mexicaine. Chaque plat
+                    raconte une histoire de tradition et de convivialité, chaque
+                    saveur évoque une fête.
                   </p>
-                  <img src="img/france/french-food-1.jpeg" alt="" />
+                  <img src="img/mexique/mexican-food-4.jpeg" alt="" />
                 </div>
               </div>
               <div class="col-12 col-md-6">
-                <img src="img/france/french-food-4.jpeg" alt="" />
+                <img src="img/mexique/mexican-food-1.jpeg" alt="" />
               </div>
               <div class="col-12">
                 <div class="carousel">carousel</div>
@@ -333,11 +333,11 @@
                 </div>
               </div>
               <div class="col-12 col-md-6">
-                <img src="img/france/french-food-2.jpeg" alt="" />
+                <img src="img/mexique/mexican-food-2.jpeg" alt="" />
               </div>
               <div class="col-12 col-md-6 order-md-2">
                 <div class="img-height">
-                  <img src="img/france/french-food-3.jpeg" alt="" />
+                  <img src="img/mexique/mexican-food-3.jpeg" alt="" />
                 </div>
               </div>
             </div>
@@ -345,25 +345,25 @@
         </div>
       </section>
       <section>
-        <div class="pattern"></div>
+        <div class="pattern pattern-libanese"></div>
         <div class="container">
           <div class="content">
             <div class="row">
               <div class="col-12 col-md-6">
-                <div class="title"><h2>France</h2></div>
+                <div class="title"><h2>Liban</h2></div>
               </div>
               <div class="col-12 col-md-6 order-md-2">
                 <div class="text-part">
                   <p>
-                    La cuisine française, c'est l'art de la perfection.
-                    Découvrez des plats élaborés avec précision, des vins exquis
-                    et une ambiance chaleureuse.
+                    La cuisine libanaise est une célébration de la simplicité et
+                    de la générosité. Goûtez à l'hospitalité libanaise à chaque
+                    plat. 
                   </p>
-                  <img src="img/france/french-food-1.jpeg" alt="" />
+                  <img src="img/liban/libanese-food-4.jpeg" alt="" />
                 </div>
               </div>
               <div class="col-12 col-md-6">
-                <img src="img/france/french-food-4.jpeg" alt="" />
+                <img src="img/liban/libanese-food-2.jpeg" alt="" />
               </div>
               <div class="col-12">
                 <div class="carousel">carousel</div>
@@ -374,11 +374,11 @@
                 </div>
               </div>
               <div class="col-12 col-md-6">
-                <img src="img/france/french-food-2.jpeg" alt="" />
+                <img src="img/liban/libanese-food-1.png" alt="" />
               </div>
               <div class="col-12 col-md-6 order-md-2">
                 <div class="img-height">
-                  <img src="img/france/french-food-3.jpeg" alt="" />
+                  <img src="img/liban/libanese-food-3.jpeg" alt="" />
                 </div>
               </div>
             </div>
@@ -386,25 +386,25 @@
         </div>
       </section>
       <section>
-        <div class="pattern"></div>
+        <div class="pattern pattern-maroccan"></div>
         <div class="container">
           <div class="content">
             <div class="row">
               <div class="col-12 col-md-6">
-                <div class="title"><h2>France</h2></div>
+                <div class="title"><h2>Maroc</h2></div>
               </div>
               <div class="col-12 col-md-6 order-md-2">
                 <div class="text-part">
                   <p>
-                    La cuisine française, c'est l'art de la perfection.
-                    Découvrez des plats élaborés avec précision, des vins exquis
-                    et une ambiance chaleureuse.
+                    La cuisine marocaine, c'est une danse de saveurs exquises.
+                    Découvrez des plats authentiques qui reflètent la diversité
+                    et la tradition du Maroc.
                   </p>
-                  <img src="img/france/french-food-1.jpeg" alt="" />
+                  <img src="img/maroc/moroccan-food-3.jpeg" alt="" />
                 </div>
               </div>
               <div class="col-12 col-md-6">
-                <img src="img/france/french-food-4.jpeg" alt="" />
+                <img src="img/maroc/moroccan-food-1.webp" alt="" />
               </div>
               <div class="col-12">
                 <div class="carousel">carousel</div>
@@ -415,11 +415,52 @@
                 </div>
               </div>
               <div class="col-12 col-md-6">
-                <img src="img/france/french-food-2.jpeg" alt="" />
+                <img src="img/maroc/moroccan-food-2.jpeg" alt="" />
               </div>
               <div class="col-12 col-md-6 order-md-2">
                 <div class="img-height">
-                  <img src="img/france/french-food-3.jpeg" alt="" />
+                  <img src="img/maroc/moroccan-food-4.webp" alt="" />
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+      <section>
+        <div class="pattern pattern-indian"></div>
+        <div class="container">
+          <div class="content">
+            <div class="row">
+              <div class="col-12 col-md-6">
+                <div class="title"><h2>Inde</h2></div>
+              </div>
+              <div class="col-12 col-md-6 order-md-2">
+                <div class="text-part">
+                  <p>
+                    Savourez l'art de la cuisine indienne, où les épices, les
+                    herbes aromatiques et les sauces créent une symphonie de
+                    goûts exotiques. 
+                  </p>
+                  <img src="img/inde/indian-food-2.webp" alt="" />
+                </div>
+              </div>
+              <div class="col-12 col-md-6">
+                <img src="img/inde/indian-food-1.webp" alt="" />
+              </div>
+              <div class="col-12">
+                <div class="carousel">carousel</div>
+              </div>
+              <div class="col-12 col-md-6 order-md-1">
+                <div class="center">
+                  <div class="button-menu">Voir le menu</div>
+                </div>
+              </div>
+              <div class="col-12 col-md-6">
+                <img src="img/inde/indian-food-3.jpeg" alt="" />
+              </div>
+              <div class="col-12 col-md-6 order-md-2">
+                <div class="img-height">
+                  <img src="img/inde/indian-food-4.webp" alt="" />
                 </div>
               </div>
             </div>
