beginning of the footer

--- a/index.html
+++ b/index.html
@@ -469,6 +469,7 @@
       </section>
     </main>
     <footer>
+      <div class="pattern pattern-end"></div>
       <div class="row">
         <div class="col-12 col-md-6">Réservation</div>
         <div class="col-12 col-md-6 order-md-1">Contact</div>
