--- a/index.html
+++ b/index.html
@@ -471,7 +471,13 @@
     <footer>
       <div class="pattern pattern-end"></div>
       <div class="row">
-        <div class="col-12 col-md-6">Réservation</div>
+        <div class="col-12 col-md-6">
+          <h2>réservation par téléphone</h2>
+          <div class="timetable">
+            <div class="day"></div>
+            <div class="hours"></div>
+          </div>
+        </div>
         <div class="col-12 col-md-6 order-md-1">Contact</div>
         <div class="col-2 offset-5 order-md- 2">Credit</div>
       </div>
