--- a/index.html
+++ b/index.html
@@ -474,12 +474,50 @@
         <div class="col-12 col-md-6">
           <h2>réservation par téléphone</h2>
           <div class="timetable">
-            <div class="day"></div>
-            <div class="hours"></div>
+            <div class="day">
+              <p>lun</p>
+              <p>mar-jeu</p>
+              <p>ven-sam</p>
+              <p>dim</p>
+            </div>
+            <div class="hours">
+              <p>fermé</p>
+              <p>16:00-22:00</p>
+              <p>16:00-23:00</p>
+              <p>16:00-21:00</p>
+            </div>
           </div>
         </div>
-        <div class="col-12 col-md-6 order-md-1">Contact</div>
-        <div class="col-2 offset-5 order-md- 2">Credit</div>
+        <div class="col-12 col-md-6 order-md-1">
+          <div class="contact">
+            <a class="instagram" href="https://www.instagram.com/terre_mere/">
+              <div class="icon">
+                <img src="img/contact/instagram.png" alt="" />
+              </div>
+              <div class="contact-info">@terre_mere</div>
+            </a>
+            <a class="mail" href="mailto:Info@TerreMere.com">
+              <div class="icon"><img src="img/contact/mail.png" alt="" /></div>
+              <div class="contact-info">Info@TerreMere.com</div>
+            </a>
+            <a class="phone" href="tel:+3223747349">
+              <div class="icon"><img src="img/contact/phone.png" alt="" /></div>
+              <div class="contact-info">+32 2 374 73 49</div>
+            </a>
+            <a
+              href="https://www.google.com/maps/search/Saint,+Martinoux+8,+6220+Fleurus,+Belgique/@50.4684558,4.5137574,13z?entry=ttu"
+              class="adress"
+            >
+              <div class="icon">
+                <img src="img/contact/adress.png" alt="" />
+              </div>
+              <div class="contact-info">
+                Saint, Martinoux 8, 6220 Fleurus, Belgique
+              </div>
+            </a>
+          </div>
+        </div>
+        <div class="col-2 offset-5 order-md- 2">@terremere</div>
       </div>
     </footer>
   </body>
