imd added to carousel

--- a/index.html
+++ b/index.html
@@ -161,7 +161,9 @@
                 <img src="img/france/french-food-4.jpeg" alt="" />
               </div>
               <div class="col-12">
-                <div class="carousel">carousel</div>
+                <div class="carousel">
+                  <img src="img/france/french-food-1.jpeg" alt="" />
+                </div>
               </div>
               <div class="col-12 col-md-6 order-md-1">
                 <div class="center">
@@ -193,7 +195,7 @@
                   <p>
                     Plongez dans la sérénité de la cuisine japonaise. Chaque
                     plat est une œuvre d'art comestible, chaque bouchée est une
-                    expérience méditative. 
+                    expérience méditative.
                   </p>
                   <img src="img/japon/japanese-food-1.jpeg" alt="" />
                 </div>
@@ -202,7 +204,9 @@
                 <img src="img/japon/japanese-food-3.jpeg" alt="" />
               </div>
               <div class="col-12">
-                <div class="carousel">carousel</div>
+                <div class="carousel">
+                  <img src="img/japon/japanese-food-1.jpeg" alt="" />
+                </div>
               </div>
               <div class="col-12 col-md-6 order-md-1">
                 <div class="center">
@@ -234,7 +238,7 @@
                   <p>
                     La cuisine éthiopienne, c'est une exploration des saveurs de
                     l'Afrique de l'Est. Découvrez des plats authentiques qui
-                    reflètent la diversité de la région. 
+                    reflètent la diversité de la région.
                   </p>
                   <img src="img/éthiopie/ethiopian-food-3.jpeg" alt="" />
                 </div>
@@ -243,7 +247,9 @@
                 <img src="img/éthiopie/ethiopian-food-2.jpeg" alt="" />
               </div>
               <div class="col-12">
-                <div class="carousel">carousel</div>
+                <div class="carousel">
+                  <img src="img/éthiopie/ethiopian-food-1.jpeg" alt="" />
+                </div>
               </div>
               <div class="col-12 col-md-6 order-md-1">
                 <div class="center">
@@ -275,7 +281,7 @@
                   <p>
                     La cuisine grecque, c'est une symphonie de saveurs
                     méditerranéennes. Découvrez des plats authentiques qui
-                    capturent l'esprit et la tradition de la Grèce. 
+                    capturent l'esprit et la tradition de la Grèce.
                   </p>
                   <img src="img/grèce/greek-food-2.jpeg" alt="" />
                 </div>
@@ -284,7 +290,9 @@
                 <img src="img/grèce/greek-food-1.jpeg" alt="" />
               </div>
               <div class="col-12">
-                <div class="carousel">carousel</div>
+                <div class="carousel">
+                  <img src="img/grèce/greek-food-1.jpeg" alt="" />
+                </div>
               </div>
               <div class="col-12 col-md-6 order-md-1">
                 <div class="center">
@@ -325,7 +333,9 @@
                 <img src="img/mexique/mexican-food-1.jpeg" alt="" />
               </div>
               <div class="col-12">
-                <div class="carousel">carousel</div>
+                <div class="carousel">
+                  <img src="img/mexique/mexican-food-1.jpeg" alt="" />
+                </div>
               </div>
               <div class="col-12 col-md-6 order-md-1">
                 <div class="center">
@@ -357,7 +367,7 @@
                   <p>
                     La cuisine libanaise est une célébration de la simplicité et
                     de la générosité. Goûtez à l'hospitalité libanaise à chaque
-                    plat. 
+                    plat.
                   </p>
                   <img src="img/liban/libanese-food-4.jpeg" alt="" />
                 </div>
@@ -366,7 +376,9 @@
                 <img src="img/liban/libanese-food-2.jpeg" alt="" />
               </div>
               <div class="col-12">
-                <div class="carousel">carousel</div>
+                <div class="carousel">
+                  <img src="img/liban/libanese-food-1.png" alt="" />
+                </div>
               </div>
               <div class="col-12 col-md-6 order-md-1">
                 <div class="center">
@@ -407,7 +419,9 @@
                 <img src="img/maroc/moroccan-food-1.webp" alt="" />
               </div>
               <div class="col-12">
-                <div class="carousel">carousel</div>
+                <div class="carousel">
+                  <img src="img/maroc/moroccan-food-1.webp" alt="" />
+                </div>
               </div>
               <div class="col-12 col-md-6 order-md-1">
                 <div class="center">
@@ -439,7 +453,7 @@
                   <p>
                     Savourez l'art de la cuisine indienne, où les épices, les
                     herbes aromatiques et les sauces créent une symphonie de
-                    goûts exotiques. 
+                    goûts exotiques.
                   </p>
                   <img src="img/inde/indian-food-2.webp" alt="" />
                 </div>
@@ -448,7 +462,9 @@
                 <img src="img/inde/indian-food-1.webp" alt="" />
               </div>
               <div class="col-12">
-                <div class="carousel">carousel</div>
+                <div class="carousel">
+                  <img src="img/inde/indian-food-1.webp" alt="" />
+                </div>
               </div>
               <div class="col-12 col-md-6 order-md-1">
                 <div class="center">
