--- a/index.html
+++ b/index.html
@@ -373,7 +373,7 @@
                 </div>
               </div>
               <div class="col-12 col-md-6">
-                <img src="img/liban/libanese-food-2.jpeg" alt="" />
+                <img src="img/liban/libanese-food-2.webp" alt="" />
               </div>
               <div class="col-12">
                 <div class="carousel">
