make links valid

--- a/index.html
+++ b/index.html
@@ -9,10 +9,11 @@
     <link rel="stylesheet" href="https://use.typekit.net/ggr3atf.css" />
     <link rel="stylesheet" href="https://use.typekit.net/ggr3atf.css" />
   </head>
-  <body>
+  <body id="accueil">
     <header>
       <div class="navigation">
-        <a href="">Accueil</a><a href="">Cartes</a><a href="">Contact</a>
+        <a href="#accueil">Accueil</a><a href="#cartes">Cartes</a
+        ><a href="#contact">Contact</a><a href="#reservation">Réservation</a>
       </div>
       <div class="burger-menu">
         <svg
@@ -51,7 +52,7 @@
               </p>
             </div>
           </div>
-          <div class="nav">
+          <div id="cartes" class="nav">
             <div class="row">
               <div class="col-12 col-md-3">
                 <div class="country">
@@ -507,7 +508,7 @@
           </div>
           <div class="col-12 col-md-6">
             <div class="contact-center">
-              <div class="contact">
+              <div id="contact" class="contact">
                 <a
                   class="instagram"
                   href="https://www.instagram.com/terre_mere/"
