--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8" />
-    <title>Examen 2</title>
+    <title>TerreMere</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="css/bootstrap-grid.css" />
     <link rel="stylesheet" href="css/main.css" />
@@ -12,8 +12,14 @@
   <body id="accueil">
     <header>
       <div class="navigation">
-        <a href="#accueil">Accueil</a><a href="#cartes">Cartes</a
-        ><a href="#contact">Contact</a><a href="#reservation">Réservation</a>
+        <div class="container">
+          <div class="row">
+            <div class="col-3"><a href="#accueil">Accueil</a></div>
+            <div class="col-3"><a href="#cartes">Cartes</a></div>
+            <div class="col-3"><a href="#reservation">Réservation</a></div>
+            <div class="col-3"><a href="#contact">Contact</a></div>
+          </div>
+        </div>
       </div>
       <div class="burger-menu">
         <svg
@@ -490,7 +496,7 @@
       <div class="row">
         <div class="footer-center">
           <div class="col-12 col-md-6 order-md-1">
-            <h2>réservation par téléphone</h2>
+            <h2 id="reservation">réservation par téléphone</h2>
             <div class="timetable">
               <div class="day">
                 <p>lun</p>
