--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8" />
-    <title>TerreMere</title>
+    <title>Examen 2</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="css/bootstrap-grid.css" />
     <link rel="stylesheet" href="css/main.css" />
@@ -12,14 +12,8 @@
   <body id="accueil">
     <header>
       <div class="navigation">
-        <div class="container">
-          <div class="row">
-            <div class="col-3"><a href="#accueil">Accueil</a></div>
-            <div class="col-3"><a href="#cartes">Cartes</a></div>
-            <div class="col-3"><a href="#reservation">Réservation</a></div>
-            <div class="col-3"><a href="#contact">Contact</a></div>
-          </div>
-        </div>
+        <a href="#accueil">Accueil</a><a href="#cartes">Cartes</a
+        ><a href="#contact">Contact</a><a href="#reservation">Réservation</a>
       </div>
       <div class="burger-menu">
         <svg
@@ -50,7 +44,7 @@
           <div class="row">
             <div class="col-12 col-md-8 col-lg-6 offset-md-2 offset-lg-3">
               <h1>TerreMere</h1>
-              <p>
+              <p id="cartes">
                 Ce restaurant offre une aventure gastronomique préparée par une
                 équipe de chefs talentueux, qui offre une immersion totale dans
                 la diversité culinaire mondiale. Venez goûter le monde en une
@@ -58,7 +52,7 @@
               </p>
             </div>
           </div>
-          <div id="cartes" class="nav">
+          <div class="nav">
             <div class="row">
               <div class="col-12 col-md-3">
                 <div class="country">
