--- a/index.html
+++ b/index.html
@@ -60,6 +60,12 @@
                     src="img/france/french-nav.jpg"
                     alt="picture of a dish from France"
                   />
+                  <div class="country-overlay">
+                    <div class="overlay-title">
+                      France
+                      <div class="line"></div>
+                    </div>
+                  </div>
                   <div class="country-title">France</div>
                 </div>
               </div>
@@ -70,6 +76,12 @@
                     src="img/japon/japanese-nav.jpeg"
                     alt="picture of a dish from Japan"
                   />
+                  <div class="country-overlay">
+                    <div class="overlay-title">
+                      Japon
+                      <div class="line"></div>
+                    </div>
+                  </div>
                 </div>
               </div>
               <div class="col-12 col-md-3">
@@ -78,6 +90,12 @@
                     src="img/éthiopie/ethiopian-nav.jpeg"
                     alt="picture of a dish from Ethiopia"
                   />
+                  <div class="country-overlay">
+                    <div class="overlay-title">
+                      Ethiopie
+                      <div class="line"></div>
+                    </div>
+                  </div>
                   <div class="country-title">Ethiopie</div>
                 </div>
               </div>
@@ -88,6 +106,12 @@
                     src="img/grèce/greek-nav.jpg"
                     alt="picture of a dish from Greece"
                   />
+                  <div class="country-overlay">
+                    <div class="overlay-title">
+                      Grèce
+                      <div class="line"></div>
+                    </div>
+                  </div>
                 </div>
               </div>
               <div class="col-12 col-md-3">
@@ -96,6 +120,12 @@
                     src="img/mexique/mexican-nav.jpg"
                     alt="picture of a dish from Mexico"
                   />
+                  <div class="country-overlay">
+                    <div class="overlay-title">
+                      Mexique
+                      <div class="line"></div>
+                    </div>
+                  </div>
                   <div class="country-title">Mexique</div>
                 </div>
               </div>
@@ -106,6 +136,12 @@
                     src="img/liban/libanese-nav.jpg"
                     alt="picture of a dish from Lebanon"
                   />
+                  <div class="country-overlay">
+                    <div class="overlay-title">
+                      Liban
+                      <div class="line"></div>
+                    </div>
+                  </div>
                 </div>
               </div>
               <div class="col-12 col-md-3">
@@ -114,6 +150,12 @@
                     src="img/maroc/moroccan-nav.jpg"
                     alt="picture of a dish from Morocco"
                   />
+                  <div class="country-overlay">
+                    <div class="overlay-title">
+                      Maroc
+                      <div class="line"></div>
+                    </div>
+                  </div>
                   <div class="country-title">Maroc</div>
                 </div>
               </div>
@@ -124,6 +166,12 @@
                     src="img/inde/indian-nav.jpg"
                     alt="picture of a dish from India"
                   />
+                  <div class="country-overlay">
+                    <div class="overlay-title">
+                      Inde
+                      <div class="line"></div>
+                    </div>
+                  </div>
                 </div>
               </div>
             </div>
