--- a/index.html
+++ b/index.html
@@ -56,6 +56,7 @@
             <div class="row">
               <div class="col-12 col-md-3">
                 <div class="country">
+                  <!-- first commit -->
                   <img
                     src="img/france/french-nav.jpg"
                     alt="picture of a dish from France"
